Fix horizontal scrolling in notes pane, light CSS file cleanup and reorg

--- a/app/assets/stylesheets/main-app.scss
+++ b/app/assets/stylesheets/main-app.scss
@@ -104,14 +104,6 @@ font-size: 14px;
   display:block;
 }
 
-.note-body{
-  width:100%;
-  height:120px;
-  background:white;
-  border-bottom:1px solid #ececec;
-  transition: .3s;
-}
-
 .content-main{}
 
 .content-header{}
