--- a/app/assets/stylesheets/notes-pane.scss
+++ b/app/assets/stylesheets/notes-pane.scss
@@ -4,6 +4,12 @@
 
 .note-body{
   padding: 5px;
+  box-sizing:border-box;
+  width:100%;
+  height:120px;
+  background:white;
+  border-bottom:1px solid #ececec;
+  transition: .3s;
 }
 
 .note-body:hover{
